# yellow_bumblebee

./: .gitignore  README.md  pyproject.toml  tennis_shot_identification_and_counts.py
api/: fastapi_service.py
notebooks/: tennis_shot_identification.ipynb
