[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "tennis-shot-identification"
version = "0.1.0"
description = "A project for identifying and counting tennis shots"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python-headless = "^4.5.3"
matplotlib = "^3.8.3"
numpy = "^1.21.2"
pandas = "^2.2.1"
pyyaml = "^6.0.1"
scipy = "^1.12.0"
seaborn = "^0.13.2"
tensorflow = "^2.6.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
tqdm = "^4.62.2"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
